1996-01-13  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h:
	mods for using the last (80th) column on display.  Use sysvr4 scrolling
	support if available.  Added -i option (temporary) for inverting color.
	Corrected ~ command in ftree.  Corrected infinite-loop in 'dedfind' when
	current file was symlink.

	* src/dedtype.c:
	move search-prompt to bottom of work-area, and fixed bug that left highlighting
	on if an empty reply was given

	* src/dlog.c, src/ded.h, src/ftree.c, src/dedread.c, src/dedline.c, src/dedfind.c, src/deddoit.c, src/ded.c:
	modify interface of dlog_string and dlog_prompt

	* src/dedtype.c:
	more fixes for scrolling: fix 'A' (which must adjust 'jump').  Do lookahead
	to cache line pointers so that JumpBackwards can catch more scrolling cases.
	redefine NumP as macro.

1996-01-10  Thomas E. Dickey  <dickey@clark.net>

	* src/dedview.c: corrected limit-checking for column in move2row

	* src/dedtype.c:
	corrected boundary check for scrolling that caused jitter at eof

	* src/ftree.c:
	corrected scrolling-amount by taking into account the invisible files

	* src/dedtype.c:
	must keep cursor within scrolling region (on solaris), otherwise entire
	screen scrolls

1996-01-09  Thomas E. Dickey  <dickey@clark.net>

	* src/dedtype.c: mods to support scrolling regions

	* src/dedview.c: tweaks for scrolling in dedtype.c

	* src/ded.h:
	added flag 'in_dedtype' to prevent clearing workspace area when using A/a
	commands (faster)

	* src/dedview.c: mods for scrolling regions in upLINE and downLINE

	* src/ftree.c:
	in uprow(), downrow(), use 'scrl()' to make the window scroll in the
	right direction, to make refresh faster.

	* src/ded.c:
	turn on 'scrollok()' so 'scrl()' and 'setscrreg()' will work...

1995-12-16  Thomas E. Dickey  <dickey@clark.net>

	* src/boxchars.c:
	renamed hline/vline since they're the names of curses-functions

	* src/dedcolor.c: added 'invert_colors' logic

	* src/ded.c: added '-i' option
